server/rest-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rest-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rest
  template:
    metadata:
      labels:
        app: rest
    spec:
      containers:
      - name: rest
        image: dmease/upscale-server:4.0
        volumeMounts:
        - mountPath: /etc/credentials
          name: gcp-credentials
        ports:
        - containerPort: 5000
      volumes:
      - name: gcp-credentials
        secret:
          secretName: gcp-credentials
          items:
          - key: creds
            path: gcp-credentials.json
