server/rest-service-local.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest-svc
spec:
  selector:
    app: rest
  ports:
  - port: 5000
    targetPort: 5000
