server/rest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest-svc
spec:
  type: NodePort
  selector:
    app: rest
  ports:
  - name: rest
    port: 5000
    targetPort: 5000
