server/rest-ingress-local.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: rest-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: rest-svc
          servicePort: 5000
